<resources>
    <string name="app_name">Women Safety</string>
    <string name="login">Log In</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_group">Create Group</string>
    <string name="join_group">Join Group</string>
    <string name="group_code">Group Join Code</string>
    <string name="sos">SOS</string>
    <string name="manage_contacts">Manage SOS Contacts</string>
    <string name="add_contact">Add Contact</string>
    <string name="phone_number">Phone Number</string>
    <string name="contact_name">Contact Name</string>
</resources>
